{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 1202,
  "lineage": "dcdf94c5-861f-7674-dc96-394a560d82cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "syself_natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b9b2368b4914267",
            "domain": "vpc",
            "id": "eipalloc-04b9b2368b4914267",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-85-236-136.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.236.136",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "project": "syself-task"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "syself_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9727076a631e62c",
            "arn": "arn:aws:ec2:us-west-2:939895954199:instance/i-058ceacbcbfc5a68f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058ceacbcbfc5a68f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "syself-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f8c28fdda25ead3",
            "private_dns": "ip-10-0-48-161.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.161",
            "public_dns": "ec2-34-222-214-2.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.214.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-067a228f086b71830",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06947aba5db892834",
            "tags": {
              "Name": "syself-bastion"
            },
            "tags_all": {
              "Name": "syself-bastion",
              "project": "syself-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0498e95394c305b6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.syself_publickey",
            "aws_security_group.syself_bastion_sg",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.syself_privatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "syself_haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aff18ec83b712f05",
            "arn": "arn:aws:ec2:us-west-2:939895954199:instance/i-069a72b6bb0831c18",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069a72b6bb0831c18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "syself-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4f14770e3873fb5",
            "private_dns": "ip-10-0-56-253.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.56.253",
            "public_dns": "ec2-35-88-86-131.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.86.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-024af4cff9c415277",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06947aba5db892834",
            "tags": {
              "Name": "syself-haproxy"
            },
            "tags_all": {
              "Name": "syself-haproxy",
              "project": "syself-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026ab0a105e17c913"
            ]
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_instance.syself_master_nodes",
            "aws_key_pair.syself_publickey",
            "aws_nat_gateway.syself_natgw",
            "aws_security_group.syself_node_sg",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.syself_privatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "syself_master_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9727076a631e62c",
            "arn": "arn:aws:ec2:us-west-2:939895954199:instance/i-0e3352287027ea9af",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3352287027ea9af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "syself-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af187a2104e208e5",
            "private_dns": "ip-10-0-7-68.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2fb5bc1b44c7b19",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019fada7ebb2e9571",
            "tags": {
              "Name": "syself-master-1",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master"
            },
            "tags_all": {
              "Name": "syself-master-1",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master",
              "project": "syself-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026ab0a105e17c913"
            ]
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_key_pair.syself_publickey",
            "aws_nat_gateway.syself_natgw",
            "aws_security_group.syself_node_sg",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.syself_privatekey"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9727076a631e62c",
            "arn": "arn:aws:ec2:us-west-2:939895954199:instance/i-0650a198b64622a48",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0650a198b64622a48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "syself-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2ed65561c6ff0f3",
            "private_dns": "ip-10-0-30-77.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d4ad106a628fa37",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071fd8eecebbcde64",
            "tags": {
              "Name": "syself-master-2",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master"
            },
            "tags_all": {
              "Name": "syself-master-2",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master",
              "project": "syself-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026ab0a105e17c913"
            ]
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_key_pair.syself_publickey",
            "aws_nat_gateway.syself_natgw",
            "aws_security_group.syself_node_sg",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.syself_privatekey"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9727076a631e62c",
            "arn": "arn:aws:ec2:us-west-2:939895954199:instance/i-0b0b19baa910473c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0b19baa910473c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "syself-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db80040393ed9231",
            "private_dns": "ip-10-0-40-107.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.40.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ccf21d90b7a3a4c",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a3d4dc6b65a8451",
            "tags": {
              "Name": "syself-master-3",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master"
            },
            "tags_all": {
              "Name": "syself-master-3",
              "kubernetes.io/cluster/syself-cluster": "owned",
              "node-type": "master",
              "project": "syself-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026ab0a105e17c913"
            ]
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_key_pair.syself_publickey",
            "aws_nat_gateway.syself_natgw",
            "aws_security_group.syself_node_sg",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.syself_privatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "syself_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:internet-gateway/igw-05edc1291d429562d",
            "id": "igw-05edc1291d429562d",
            "owner_id": "939895954199",
            "tags": {
              "Name": "syself-ig"
            },
            "tags_all": {
              "Name": "syself-ig",
              "project": "syself-task"
            },
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "dependencies": [
            "aws_vpc.syself_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "syself_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b9b2368b4914267",
            "association_id": "eipassoc-0f89fcf73dc0e31a7",
            "connectivity_type": "public",
            "id": "nat-056a5dcd07645a5a6",
            "network_interface_id": "eni-0e2a40b7be21dcdd5",
            "private_ip": "10.0.62.84",
            "public_ip": "35.85.236.136",
            "subnet_id": "subnet-06947aba5db892834",
            "tags": {
              "Name": "syself-natgw"
            },
            "tags_all": {
              "Name": "syself-natgw",
              "project": "syself-task"
            }
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "syself_priv_sub_rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:route-table/rtb-0686ac63406d1e950",
            "id": "rtb-0686ac63406d1e950",
            "owner_id": "939895954199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056a5dcd07645a5a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:route-table/rtb-071a52f8920233c79",
            "id": "rtb-071a52f8920233c79",
            "owner_id": "939895954199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056a5dcd07645a5a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:route-table/rtb-06a267d88861cd238",
            "id": "rtb-06a267d88861cd238",
            "owner_id": "939895954199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056a5dcd07645a5a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "syself_pub_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:route-table/rtb-05bd883767e66d6c1",
            "id": "rtb-05bd883767e66d6c1",
            "owner_id": "939895954199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05edc1291d429562d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.syself_ig",
            "aws_vpc.syself_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0739361a699f0c38a",
            "route_table_id": "rtb-0686ac63406d1e950",
            "subnet_id": "subnet-019fada7ebb2e9571"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_route_table.syself_priv_sub_rts",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ca48308c7fa15ab",
            "route_table_id": "rtb-071a52f8920233c79",
            "subnet_id": "subnet-071fd8eecebbcde64"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_route_table.syself_priv_sub_rts",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a7aa18e93bf8693",
            "route_table_id": "rtb-06a267d88861cd238",
            "subnet_id": "subnet-05a3d4dc6b65a8451"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_route_table.syself_priv_sub_rts",
            "aws_subnet.syself_priv_subs",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "syself_pub_sub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a33e1f9506ed8fc",
            "route_table_id": "rtb-05bd883767e66d6c1",
            "subnet_id": "subnet-06947aba5db892834"
          },
          "dependencies": [
            "aws_internet_gateway.syself_ig",
            "aws_route_table.syself_pub_sub_rt",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "syself_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:security-group/sg-0498e95394c305b6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0498e95394c305b6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "syself-bastion-sg",
            "name_prefix": "",
            "owner_id": "939895954199",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.syself_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "syself_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:security-group/sg-026ab0a105e17c913",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026ab0a105e17c913",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Custom TCP",
                "from_port": 2000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Custom TCP",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Custom TCP",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Custom TCP",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTPS",
                "from_port": 465,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 465
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Custom TCP",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Custom TCP",
                "from_port": 2380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Custom TCP",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "syself-node-sg",
            "name_prefix": "",
            "owner_id": "939895954199",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "project": "syself-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.syself_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "syself_priv_subs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:subnet/subnet-019fada7ebb2e9571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019fada7ebb2e9571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939895954199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/syself-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/syself-cluster": "shared",
              "project": "syself-task"
            },
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:subnet/subnet-071fd8eecebbcde64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071fd8eecebbcde64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939895954199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/syself-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/syself-cluster": "shared",
              "project": "syself-task"
            },
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:subnet/subnet-05a3d4dc6b65a8451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a3d4dc6b65a8451",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939895954199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/syself-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/syself-cluster": "shared",
              "project": "syself-task"
            },
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "dependencies": [
            "aws_eip.syself_natgw_eip",
            "aws_nat_gateway.syself_natgw",
            "aws_subnet.syself_pub_sub",
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "syself_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:subnet/subnet-06947aba5db892834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06947aba5db892834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939895954199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "project": "syself-task"
            },
            "vpc_id": "vpc-05820c1d3af06e1f4"
          },
          "dependencies": [
            "aws_vpc.syself_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "syself_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:939895954199:vpc/vpc-05820c1d3af06e1f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0920a9ceaf84ec3bd",
            "default_route_table_id": "rtb-01e623daa379fe098",
            "default_security_group_id": "sg-0d6ef04335ff72532",
            "dhcp_options_id": "dopt-04c2330b365f93afa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05820c1d3af06e1f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e623daa379fe098",
            "owner_id": "939895954199",
            "tags_all": {
              "project": "syself-task"
            }
          }
        }
      ]
    }
  ]
}